--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,13 +1,13 @@
 body {
     font-family: Arial, sans-serif;
     margin: 40px;
-    background-color: #f0f0f0;
+    background-color: #333;
 }
 h1 {
     color: #333;
 }
 form {
-    background: white;
+    background: #333;
     padding: 20px;
     border-radius: 10px;
 }
